made PLAYER SPRITE const

--- a/blankCanvas.html
+++ b/blankCanvas.html
@@ -30,6 +30,7 @@
         var playerYspeed = 5;
         
         var playerSpriteArray = [];
+        const PLAYER_SPRITES = 12;
         
         var swordXpos = playerXpos;
         var swordYpos = PLAYER_SIZE + playerYpos;
