made playerSpriteNum var

--- a/blankCanvas.html
+++ b/blankCanvas.html
@@ -31,7 +31,8 @@
         
         var playerSpriteArray = [];
         const PLAYER_SPRITES = 12;
-        
+        var playerSpriteNum = 0;
+
         var swordXpos = playerXpos;
         var swordYpos = PLAYER_SIZE + playerYpos;
         var SWORD_WIDTH = 100;
